objects/Integration_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Integration_Name__c</fullName>
        <label>Integration Name</label>
        <picklist>
            <picklistValues>
                <fullName>Upsert_EmployeeContactUser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivate_User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_RecordTypeId__c</fullName>
        <label>Integration RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Object_Field__c</fullName>
        <label>SF Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Object_Name__c</fullName>
        <label>SF Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stg_Field_Name__c</fullName>
        <label>Stg Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Mapping</label>
    <nameField>
        <label>Integration Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>